<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentCard"
    android:backgroundTint="@color/primaryColorLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:layout_margin="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/textFilename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_filename"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <include
                layout="@layout/file_summary_features"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/summary"/>

            <include
                layout="@layout/file_summary_display"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/chat"/>

            <include
                layout="@layout/file_chat_section"/>

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>